--- a/apps/concoursprojets/front/templates/concours_projets.html
+++ b/apps/concoursprojets/front/templates/concours_projets.html
@@ -1,40 +1,43 @@
 <style>
-ul.menu-interne{
-	  text-align:center;
-	  position: -webkit-sticky; /* Safari */
-	  position:sticky;
-	  list-style-type: none;
-	  top:90px;
-	  z-index: 2;
-	  
-	  background-color: rgba(255,255,255,1);
+	ul.menu-interne {
+		text-align: center;
+		position: -webkit-sticky;
+		/* Safari */
+		position: sticky;
+		list-style-type: none;
+		top: 90px;
+		z-index: 2;
+
+		background-color: rgba(255, 255, 255, 1);
 	}
-	
-	
-	
-li.menu-elt{
-	display:inline-block;
-	padding:12px;
+
+
+
+	li.menu-elt {
+		display: inline-block;
+		padding: 12px;
 
 	}
-	
-li a.menu-lien{
-	display:block;
-	text-align:center;
-	color:rgba(213, 7, 28, 1);
-	
-	
+
+	li a.menu-lien {
+		display: block;
+		text-align: center;
+		color: rgba(213, 7, 28, 1);
+
+
 	}
-h2.featurette-heading{
-	padding-top:100px;
-}	
-.cache-deroulant{
-	position: -webkit-sticky; 
-	position:sticky;
-	background-color:#ffffff;
-	top:0px;
-	padding:45px;
-	z-index:1;
+
+	h2.featurette-heading {
+		padding-top: 100px;
+	}
+
+	.cache-deroulant {
+		position: -webkit-sticky;
+		position: sticky;
+		background-color: #ffffff;
+		top: 0px;
+		padding: 45px;
+		z-index: 1;
 	}
 </style>
 
@@ -42,35 +45,35 @@ h2.featurette-heading{
 <div class="cache-deroulant">
 </div>
 
-	<ul class="menu-interne"> 
-		<li class="menu-elt">
-			<a class="menu-lien" href="#préambule">Présentation</a>
-		</li>
-		
-		<li class="menu-elt">
-			<a class="menu-lien" href="#conditions de participation">Conditions</a>
-		</li>
-		
-		<li class="menu-elt">
-			<a class="menu-lien" href="#modalités de participations">Modalités</a>
-		</li>
-		
-		<li class="menu-elt">
-			<a class="menu-lien" href="#modalités de sélection des lauréats">Sélection</a>
-		</li>
-		
-		<li class="menu-elt">
-			<a class="menu-lien" href="#données à caractère personnel">Données à caractère personnel</a>
-		</li>
-		
-		<li class="menu-elt">
-			<a class="menu-lien" href="#interprétation">Interprétation</a>
-		</li>
-		
-		<li class="menu-elt">
-			<a class="menu-lien" href="#mentions">Mentions supplémentaires</a>
-		</li>
-	</ul>
+<ul class="menu-interne">
+	<li class="menu-elt">
+		<a class="menu-lien" href="#préambule">Présentation</a>
+	</li>
+
+	<li class="menu-elt">
+		<a class="menu-lien" href="#conditions de participation">Conditions</a>
+	</li>
+
+	<li class="menu-elt">
+		<a class="menu-lien" href="#modalités de participations">Modalités</a>
+	</li>
+
+	<li class="menu-elt">
+		<a class="menu-lien" href="#modalités de sélection des lauréats">Sélection</a>
+	</li>
+
+	<li class="menu-elt">
+		<a class="menu-lien" href="#données à caractère personnel">Données à caractère personnel</a>
+	</li>
+
+	<li class="menu-elt">
+		<a class="menu-lien" href="#interprétation">Interprétation</a>
+	</li>
+
+	<li class="menu-elt">
+		<a class="menu-lien" href="#mentions">Mentions supplémentaires</a>
+	</li>
+</ul>
 
 
 
@@ -81,13 +84,18 @@ h2.featurette-heading{
 				<h2 class="featurette-heading">Préambule<span class="text-muted"> </span></h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-						Le Concours de Projets organisé lors du Forum Est Horizon a pour objectif de permettre aux étudiants de venir présenter leurs idées et leurs travaux innovants à un jury composé de personnes familières au monde de la start-up et de l’entreprenariat. Les meilleurs projets sont récompensés par un chèque permettant aux étudiants de poursuivre l’avancement de leurs travaux. Le Concours de Projets du Forum Est-Horizon est organisé en collaboration avec le Pôle entrepreneuriat étudiant de Lorraine (PEEL).
+						Le Concours de Projets organisé lors du Forum Est Horizon a pour objectif de permettre aux
+						étudiants de venir présenter leurs idées et leurs travaux innovants à un jury composé de
+						personnes familières au monde de la start-up et de l’entreprenariat. Les meilleurs projets sont
+						récompensés par un chèque permettant aux étudiants de poursuivre l’avancement de leurs travaux.
+						Le Concours de Projets du Forum Est-Horizon est organisé en collaboration avec le Pôle
+						entrepreneuriat étudiant de Lorraine (PEEL).
 					</p>
-			
+
 				</div>
 			</div>
-				
-				
+
+
 		</div>
 	</div>
 </div>
@@ -99,19 +107,22 @@ h2.featurette-heading{
 				<h2 class="featurette-heading">Conditions de participation<span class="text-muted"> </span></h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-						Le concours est ouvert aux <strong>étudiants</strong>, <strong>étudiants entrepreneurs</strong> ainsi qu’aux <strong>groupe d'étudiants</strong>.
+						Le concours est ouvert aux <strong>étudiants</strong>, <strong>étudiants entrepreneurs</strong>
+						ainsi qu’aux <strong>groupe d'étudiants</strong>.
 						Le concours comporte deux catégories :<br><br>
-						- <strong>« Projet Émergent » </strong>: les porteurs du projet ont une idée qui commence à germer et ont déjà
+						- <strong>« Projet Émergent » </strong>: les porteurs du projet ont une idée qui commence à
+						germer et ont déjà
 						effectué quelques recherches autour de cette idée.<br><br>
-						-<strong> « Projet Avancé » </strong>: les porteurs du projet ont concrétisé leur idée sous forme de prototypes,
+						-<strong> « Projet Avancé » </strong>: les porteurs du projet ont concrétisé leur idée sous
+						forme de prototypes,
 						réalisations ou expérimentations multiples...
 
 					</p>
-			
+
 				</div>
 			</div>
-				
-				
+
+
 		</div>
 	</div>
 </div>
@@ -123,28 +134,35 @@ h2.featurette-heading{
 				<h2 class="featurette-heading">Modalités de participation<span class="text-muted"> </span></h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-						<strong>1) </strong> Les inscriptions au jeu concours s’effectuent uniquement par voie électronique.<br>
+						<strong>1) </strong> Les inscriptions au concours s’effectuent uniquement par voie
+						électronique.<br>
 						<strong>2) </strong> Remplir le document "Présentation du projet" ci-dessous. <br>
-						<p> <a href="projetforum.pdf">Télécharger le document</a></p>
+					<p> <a href="projetforum.pdf">Télécharger le document</a></p>
 
-				
+
 					<p class="lead text-justify">
-						<strong>3) </strong> Lors de l’ouverture des inscriptions, les participants choisissent de participer à <strong>l’une des 2
-							catégories proposées</strong> : Projet Émergent ou Projet Avancé. Un seul projet sera désigné gagnant par
-							le jury dans chacune des catégories.<br>
-						<strong>4) </strong> Pour être inscrit, chaque participant/équipe doit envoyer un mail, lors de l’ouverture des
-							inscriptions, à l’adresse concoursprojet.esthorizon@gmail.com en indiquant en objet “Concours de
-							Projet 2021”, et envoyer en pièce jointe le document « Présentation du projet » rempli et <strong>sous format pdf</strong>.
-							 Un mail de confirmation validera l’inscription au concours.<br>
-						<strong>5) </strong> En accord avec le paragraphe suivant, les candidats sélectionnés pour participer au concours devront
-							envoyer le livrable à la même adresse mail, avant le 1er décembre. Le livrable sera composé d’une
-							présentation de 5 diapositives maximum <strong>sous format pdf</strong>.
+						<strong>3) </strong> Lors de l’ouverture des inscriptions, les participants choisissent de
+						participer à <strong>l’une des 2
+							catégories proposées</strong> : Projet Émergent ou Projet Avancé. Un seul projet sera
+						désigné gagnant par
+						le jury dans chacune des catégories.<br>
+						<strong>4) </strong> Pour être inscrit, chaque participant/équipe doit envoyer un mail, lors de
+						l’ouverture des
+						inscriptions, à l’adresse concoursprojet.esthorizon@gmail.com en indiquant en objet “Concours de
+						Projet 2021”, et envoyer en pièce jointe le document « Présentation du projet » rempli et
+						<strong>sous format pdf</strong>.
+						Un mail de confirmation validera l’inscription au concours.<br>
+						<strong>5) </strong> En accord avec le paragraphe suivant, les candidats sélectionnés pour
+						participer au concours devront
+						envoyer le livrable à la même adresse mail, avant le 1er décembre. Le livrable sera composé
+						d’une
+						présentation de 5 diapositives maximum <strong>sous format pdf</strong>.
 					</p>
-			
+
 				</div>
 			</div>
-				
-				
+
+
 		</div>
 	</div>
 </div>
@@ -153,139 +171,152 @@ h2.featurette-heading{
 	<div class="container marketing">
 		<div class="row featurette">
 			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading"> Modalités de sélection des lauréats<span class="text-muted"> </span></h2>
+				<h2 class="featurette-heading"> Modalités de sélection des lauréats<span class="text-muted"> </span>
+				</h2>
 				<div class="col-xs-12 col-sm-12 col-lg-12">
 					<p class="lead text-justify">
-						<div class="col-xs-12 col-sm-12 col-lg-12">
-							<h3 style="color:rgba(0,0,0,1)">Phase 1 : Inscription au concours</h3>
-							
-								<p class="lead text-justify">
-						Les inscriptions seront ouvertes du 13 septembre 2021 au 1er novembre 2021, les dépôts des
-						projets et participations se feront via l’envoi d’un mail à l’adresse citée dans l’article 3.4, aucun
-						dossier ne pourra être modifié après cette date, et chaque dossier sera pris en l’état au titre de
-						participation au concours.<br><br>
-						<strong>N.B.</strong>: Dans l’éventualité d’un trop grand nombre de candidatures, le Forum Est-Horizon s’accorde le
-						droit d’opérer une sélection de projets en amont du concours.<br><br>
+					<div class="col-xs-12 col-sm-12 col-lg-12">
+						<h3 style="color:rgba(0,0,0,1)">Phase 1 : Inscription au concours</h3>
 
-					
-							<h3 style="color:rgba(0,0,0,1)">Phase 2 : Participation au concours</h3>
-							
-								<p class="lead text-justify">
-						Le candidat sélectionné devra présenter son projet devant un jury le 2 décembre 2021 au
-						centre Prouvé si le Forum Est-Horizon a lieu en présentiel, sinon via téléconférence.<br>
-						Le candidat disposera de 7 minutes de présentation. Au cours de sa prestation, le jury sera
-						particulièrement attentif aux points suivants :<br>
-						- La clarté de la présentation<br> 
-						- La problématique dans laquelle s’inscrit le projet (à quels besoins celui-ci répond-il ?)<br>
-						- La réflexion autour du modèle économique, et du public visé par le projet (à qui le projet
+						<p class="lead text-justify">
+							Les inscriptions seront ouvertes du 13 septembre 2021 au 1er novembre 2021, les dépôts des
+							projets et participations se feront via l’envoi d’un mail à l’adresse citée dans l’article
+							3.4, aucun
+							dossier ne pourra être modifié après cette date, et chaque dossier sera pris en l’état au
+							titre de
+							participation au concours.<br><br>
+							<strong>N.B.</strong>: Dans l’éventualité d’un trop grand nombre de candidatures, le Forum
+							Est-Horizon s’accorde le
+							droit d’opérer une sélection de projets en amont du concours.<br><br>
+
+
+						<h3 style="color:rgba(0,0,0,1)">Phase 2 : Participation au concours</h3>
+
+						<p class="lead text-justify">
+							Le candidat sélectionné devra présenter son projet devant un jury le 2 décembre 2021 au
+							centre Prouvé si le Forum Est-Horizon a lieu en présentiel, sinon via téléconférence.<br>
+							Le candidat disposera de 7 minutes de présentation. Au cours de sa prestation, le jury sera
+							particulièrement attentif aux points suivants :<br>
+							- La clarté de la présentation<br>
+							- La problématique dans laquelle s’inscrit le projet (à quels besoins celui-ci répond-il
+							?)<br>
+							- La réflexion autour du modèle économique, et du public visé par le projet (à qui le projet
 							s’adresse-t-il, comment comptez-vous le financer ou l’avez-vous financé ?)<br><br>
-					
-					
+
+
 						<h3 style="color:rgba(0,0,0,1)">Phase 3 : Sélection des vainqueurs</h3>
-						
-							<p class="lead text-justify">
-						L’annonce des lauréats de chaque catégorie se fera dans la même journée, une fois que tous
-						les candidats auront présenté leur projet.<br><br>
-						Le Forum Est-Horizon offre <strong>500€</strong> au lauréat de la catégorie « Projet Émergent », et <strong>1000€</strong> à
-						celui de la catégorie « Projet Avancé ». Un prix « coup de cœur Rotary » sera délivré à un projet
-						sous une forme à déterminer.
 
-							
-					</p>
-			
+						<p class="lead text-justify">
+							L’annonce des lauréats de chaque catégorie se fera dans la même journée, une fois que tous
+							les candidats auront présenté leur projet.<br><br>
+							Le Forum Est-Horizon offre <strong>500€</strong> au lauréat de la catégorie « Projet
+							Émergent », et <strong>1000€</strong> à
+							celui de la catégorie « Projet Avancé ». Un prix « coup de cœur Rotary » sera délivré à un
+							projet
+							sous une forme à déterminer.
+
+
+						</p>
+
+					</div>
 				</div>
+
+
 			</div>
-				
-				
 		</div>
 	</div>
-</div>
 
-<div class="article " id="inscription">
-	<div class="container marketing">
-		<div class="row featurette">
-			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading">Données à caractère personnel<span class="text-muted"> </span></h2>
+	<div class="article " id="inscription">
+		<div class="container marketing">
+			<div class="row featurette">
 				<div class="col-xs-12 col-sm-12 col-lg-12">
-					<p class="lead text-justify">
-						Dans le cadre de leur participation au Concours Projets Est-Horizon, les candidats autorisent le
-Forum Est-Horizon à récolter et conserver des informations nominatives personnelles en signant le
-document « Présentation du projet ». La communication de ces données est volontaire et les
-informations sont exclusivement destinées au Forum Est-Horizon et aux partenaires du Concours
-Projets Est-Horizon.
+					<h2 class="featurette-heading">Données à caractère personnel<span class="text-muted"> </span></h2>
+					<div class="col-xs-12 col-sm-12 col-lg-12">
+						<p class="lead text-justify">
+							Dans le cadre de leur participation au Concours Projets Est-Horizon, les candidats
+							autorisent le
+							Forum Est-Horizon à récolter et conserver des informations nominatives personnelles en
+							signant le
+							document « Présentation du projet ». La communication de ces données est volontaire et les
+							informations sont exclusivement destinées au Forum Est-Horizon et aux partenaires du
+							Concours
+							Projets Est-Horizon.
 
 
-					</p>
-			
+						</p>
+
+					</div>
 				</div>
+
+
 			</div>
-				
-				
 		</div>
 	</div>
-</div>
 
-<div class="article " id="calendrier">
-	<div class="container marketing">
-		<div class="row featurette">
-			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading">Interprétation<span class="text-muted"> </span></h2>
+	<div class="article " id="calendrier">
+		<div class="container marketing">
+			<div class="row featurette">
 				<div class="col-xs-12 col-sm-12 col-lg-12">
-					<p class="lead text-justify">
-						Toute question d’application ou d’interprétation du règlement, ou toute question imprévue qui
-viendrait à se poser, sera tranchée souverainement, selon la nature de la question, par le Concours
-Projets Est-Horizon.
-					</p>
-			
+					<h2 class="featurette-heading">Interprétation<span class="text-muted"> </span></h2>
+					<div class="col-xs-12 col-sm-12 col-lg-12">
+						<p class="lead text-justify">
+							Toute question d’application ou d’interprétation du règlement, ou toute question imprévue
+							qui
+							viendrait à se poser, sera tranchée souverainement, selon la nature de la question, par le
+							Concours
+							Projets Est-Horizon.
+						</p>
+
+					</div>
 				</div>
+
+
 			</div>
-				
-				
 		</div>
 	</div>
-</div>
 
 
-<div class="article " id="mentions">
-	<div class="container marketing">
-		<div class="row featurette">
-			<div class="col-xs-12 col-sm-12 col-lg-12">
-				<h2 class="featurette-heading">Mentions supplémentaires<span class="text-muted"> </span></h2>
+	<div class="article " id="mentions">
+		<div class="container marketing">
+			<div class="row featurette">
 				<div class="col-xs-12 col-sm-12 col-lg-12">
-					<p class="lead text-justify">
-Dans l’éventualité d’un trop grand nombre de candidatures, le Forum Est Horizon s’accorde le droit d’opérer une sélection de projets en amont du concours.
+					<h2 class="featurette-heading">Mentions supplémentaires<span class="text-muted"> </span></h2>
+					<div class="col-xs-12 col-sm-12 col-lg-12">
+						<p class="lead text-justify">
+							Dans l’éventualité d’un trop grand nombre de candidatures, le Forum Est Horizon s’accorde le
+							droit d’opérer une sélection de projets en amont du concours.
 
 
-					</p>
-			
+						</p>
+
+					</div>
 				</div>
+
+
 			</div>
-				
-				
 		</div>
 	</div>
-</div>	
 
 
-<!--
+	<!--
 				<div class="col-xs-12 col-sm-12 col-lg-2 center-block animation-element left" >
 					<a style="display:inline-block" href="/upload/concours/Concours_projets.pdf" target="_blank">
                 	<button id="down" class="btn btn-lg btn-secondary btn-block" type="submit">Modalités d'inscription au format pdf</button>
                 	</a>           	
             	</div>
             	-->
-<!--  =====================================================================	-->
-<!-- 		JAVASCRIPT 														-->													 
-<!--  =====================================================================	-->
-	
-<script src="/bootstrap/js/scroll_animate.js" type="text/javascript"></script>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	
-<!--  =====================================================================	-->
-<!-- 		FOOTER	 														-->													 
-<!--  =====================================================================	-->
-<!--		<div class="container ">
+	<!--  =====================================================================	-->
+	<!-- 		JAVASCRIPT 														-->
+	<!--  =====================================================================	-->
+
+	<script src="/bootstrap/js/scroll_animate.js" type="text/javascript"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+	<!--  =====================================================================	-->
+	<!-- 		FOOTER	 														-->
+	<!--  =====================================================================	-->
+	<!--		<div class="container ">
 			<hr class="featurette-divider">
 			<footer>
 				<p class="pull-right" ><a href="#" >Back to top</a></p>
@@ -296,5 +327,5 @@ Dans l’éventualité d’un trop grand nombre de candidatures, le Forum Est Ho
 	</body>
 	
 </html>-->
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
