--- a/apps/connexion/front/templates/connexion.html
+++ b/apps/connexion/front/templates/connexion.html
@@ -1,91 +1,113 @@
 <!--  =====================================================================	-->
-<!-- 		ARTICLE 														-->													 
+<!-- 		ARTICLE 														-->
 <!--  =====================================================================	-->
 
 <!--  ---------------------------------------------------------------------	-->
-<!-- 		ARTICLE 1 :connexion											-->													 
+<!-- 		ARTICLE 1 :connexion											-->
 <!--  ---------------------------------------------------------------------	-->
-		<div class="article" style="padding-top : 10%;">
-		<div class="container marketing">
-			<div class="row featurette">
-				<div class="col-md-5" >
-				  <img class="featurette-image img-responsive center-block" src="/apps/connexion/front/images/FEH-logo-fleche-haute.png" alt="Generic placeholder image">
-				</div>
-				<div class="col-md-7">
-				  <h2 class="featurette-heading">Se connecter <br/>(accès entreprise)<span class="text-muted"> </span></h2>
-				<div>				
-				<?php if (empty($_SESSION['nickname'])): ?>
-				  <form class="form-signin" action="/user" method="post">
-					<label for="inputEmail" class="sr-only">Email address</label>
-					<input name="nick" type="text" id="inputEmail" class="form-control" placeholder="Identifiant" required autofocus>
-					<label for="inputPassword" class="sr-only">Password</label>
-					<input name="pass" type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
-					<div class="checkbox">
-					  <label>
-						<input name="remember" type="checkbox" value="remember-me"> Rester connecté
-					  </label>
-					</div>
-					<button href="/user/" class="btn btn-lg btn-secondary btn-block" type="submit">Connexion</button>
-				  </form>
-				<?php else: ?>
-				
-				<div class="col-md-7" style="width : 100%">
-				<?php if (!empty($_SESSION['firmid'])): ?>
-						<div class="art-typ1" style="padding :15px;text-align:justify;">
-							<p><strong>Information à l’attention des Exposants 
-							</strong></p>
-							<p>
-								Plusieurs exposants nous ont signalé qu’ils avaient reçu un mail de la part d'une société se faisant passer pour le Forum Est-Horizon et leur demandant de leur retourner un formulaire de contrat d'une durée de 3 ans. Une autre société vous demande de vérifier l’exactitude de vos données et de les confirmer dans le but de les utiliser pour de la publicité payante. 
-							</p>
-							<p>
-								Ces sociétés utilisent la liste des exposants présents aux différents salons en France pour prendre contact avec les professionnels. Nous vous mettons donc en garde face à cette escroquerie et comptons sur votre vigilance.							
-							</p>
-							<p>
-								Pour rappel l’ensemble des documents qui vous sont transmis par notre association le sont via des adresses « ….@est-horizon.com » ou se font via ce site internet uniquement. Nos documents respectent de plus la charte graphique du Forum Est-Horizon que vous pouvez trouver sur notre site internet : http://www.est-horizon.com/							
-							</p>
-							<p>					
-						</div>				
-				<div class="inner form-signin">
-						<div id="connect_form">
-							<u><?php echo $_SESSION['firmname']; ?></u><br /><hr /><br />
-							<a href="/entreprise/toolbox/" style="max-width : 300px;" class="btn btn-lg btn-secondary btn-block" >Vos outils</a>
-							<a href="/user/deconnexion/" style="max-width : 300px;" class="btn btn-lg btn-secondary btn-block" >Déconnecter</a>
-							<hr />
+<div class="article" style="padding-top : 10%;">
+	<div class="container marketing">
+		<div class="row featurette">
+			<div class="col-md-5">
+				<img class="featurette-image img-responsive center-block"
+					src="/apps/connexion/front/images/FEH-logo-fleche-haute.jpg" alt="Generic placeholder image">
+			</div>
+			<div class="col-md-7">
+				<h2 class="featurette-heading">Se connecter <br />(accès entreprise)<span class="text-muted"> </span>
+				</h2>
+				<div>
+					<?php if (empty($_SESSION['nickname'])): ?>
+					<form class="form-signin" action="/user" method="post">
+						<label for="inputEmail" class="sr-only">Email address</label>
+						<input name="nick" type="text" id="inputEmail" class="form-control" placeholder="Identifiant"
+							required autofocus>
+						<label for="inputPassword" class="sr-only">Password</label>
+						<input name="pass" type="password" id="inputPassword" class="form-control"
+							placeholder="Mot de passe" required>
+						<div class="checkbox">
+							<label>
+								<input name="remember" type="checkbox" value="remember-me"> Rester connecté
+							</label>
 						</div>
-						<?php echo $_SESSION['prenom']." ".$_SESSION['nom']; ?>						
+						<button href="/user/" class="btn btn-lg btn-secondary btn-block"
+							type="submit">Connexion</button>
+					</form>
 					<?php else: ?>
-						<div id="connect_form">
-							<?php if (!empty($_SESSION['accessString'])): ?>
-								<?//php echo $_SESSION['accessString']; ?>	
-								<a href="/admin/" style="max-width : 300px;" class="btn btn-lg btn-secondary btn-block">Administration</a>
+
+					<div class="col-md-7" style="width : 100%">
+						<?php if (!empty($_SESSION['firmid'])): ?>
+						<div class="art-typ1" style="padding :15px;text-align:justify;">
+							<p><strong>Information à l’attention des Exposants
+								</strong></p>
+							<p>
+								Plusieurs exposants nous ont signalé qu’ils avaient reçu un mail de la part d'une
+								société se faisant passer pour le Forum Est-Horizon et leur demandant de leur retourner
+								un formulaire de contrat d'une durée de 3 ans. Une autre société vous demande de
+								vérifier l’exactitude de vos données et de les confirmer dans le but de les utiliser
+								pour de la publicité payante.
+							</p>
+							<p>
+								Ces sociétés utilisent la liste des exposants présents aux différents salons en France
+								pour prendre contact avec les professionnels. Nous vous mettons donc en garde face à
+								cette escroquerie et comptons sur votre vigilance.
+							</p>
+							<p>
+								Pour rappel l’ensemble des documents qui vous sont transmis par notre association le
+								sont via des adresses « ….@est-horizon.com » ou se font via ce site internet uniquement.
+								Nos documents respectent de plus la charte graphique du Forum Est-Horizon que vous
+								pouvez trouver sur notre site internet : http://www.est-horizon.com/
+							</p>
+							<p>
+						</div>
+						<div class="inner form-signin">
+							<div id="connect_form">
+								<u>
+									<?php echo $_SESSION['firmname']; ?>
+								</u><br />
+								<hr /><br />
+								<a href="/entreprise/toolbox/" style="max-width : 300px;"
+									class="btn btn-lg btn-secondary btn-block">Vos outils</a>
+								<a href="/user/deconnexion/" style="max-width : 300px;"
+									class="btn btn-lg btn-secondary btn-block">Déconnecter</a>
+								<hr />
+							</div>
+							<?php echo $_SESSION['prenom']." ".$_SESSION['nom']; ?>
+							<?php else: ?>
+							<div id="connect_form">
+								<?php if (!empty($_SESSION['accessString'])): ?>
+								<?//php echo $_SESSION['accessString']; ?>
+								<a href="/admin/" style="max-width : 300px;"
+									class="btn btn-lg btn-secondary btn-block">Administration</a>
 								<br /><br />
-							<?php endif; ?>
-							<?php if ($_SESSION['groupe'] == 9): // groupe éléve ?>
-								<a href="/cvtheque/" style="max-width : 300px;" class="btn btn-lg btn-secondary btn-block">Changer mes informations</a>
+								<?php endif; ?>
+								<?php if ($_SESSION['groupe'] == 9): // groupe éléve ?>
+								<a href="/cvtheque/" style="max-width : 300px;"
+									class="btn btn-lg btn-secondary btn-block">Changer mes informations</a>
 								<br /><br />
-							<?php endif; ?>
-								<a href="/user/deconnexion/" style="max-width : 300px;" class="btn btn-lg btn-secondary btn-block" >Déconnecter</a>
+								<?php endif; ?>
+								<a href="/user/deconnexion/" style="max-width : 300px;"
+									class="btn btn-lg btn-secondary btn-block">Déconnecter</a>
 								<br /><br />
 								<hr />
+							</div>
+							<?php  ?>
+							<?php endif; ?>
 						</div>
-						<?php  ?>
-					<?php endif; ?>
+						<?php endif; ?>
+					</div>
 				</div>
-				<?php endif; ?>				
-				</div>
-				</div>
-				</div>
-			 </div>
+			</div>
 		</div>
-		</div>
-	
+	</div>
+</div>
+
 <!--  =====================================================================	-->
-<!-- 		JAVASCRIPT 														-->													 
+<!-- 		JAVASCRIPT 														-->
 <!--  =====================================================================	-->
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
-		<script src="bootstrap/js/bootstrap.js"></script>
-		<!-- IE10 viewport Windows 8 bug -->
-		<script src="bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
-		<script src="bootstrap/js/scroll_animate.js" type="text/javascript"></script>		
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="bootstrap/js/bootstrap.js"></script>
+<!-- IE10 viewport Windows 8 bug -->
+<script src="bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="bootstrap/js/scroll_animate.js" type="text/javascript"></script>
