--- a/apps/accueil/front/templates/accueil.html
+++ b/apps/accueil/front/templates/accueil.html
@@ -125,6 +125,12 @@
 				<a class="btn btn-lg btn-secondary v-center" href="/inscription/" role="button"
 					style="text-align: center;">S'inscrire</a>
 			</div>
+
+			<div class="col-xs-12 col-sm-12 col-lg-2 center-block left animation-element">
+				<a class="btn btn-lg btn-secondary v-center" href="/apps/accueil/front/assets/guidevisiteur.pdf" role="button"
+					style="text-align: center;">Livret du visiteur</a>
+			</div>
+
 			<div class="col-xs-12 col-sm-6 col-lg-2">
 			</div>
 		</div>
@@ -149,11 +155,8 @@
 				<h2 class="featurette-heading">Qui sommes-nous ?<span class="text-muted"> </span></h2>
 				<p class="lead text-justify">
 
-
-				<p class="lead text-justify">Le Forum Est-Horizon (FEH) est une association étudiante de <a
-						href="https://mines-nancy.univ-lorraine.fr/">l’École des
-						Mines de Nancy</a>. Depuis 1984, elle organise chaque année l'évènement Forum Est-Horizon, un
-
+				<p class="lead text-justify">Le Forum Est-Horizon (FEH) est une association étudiante de l’École des
+					Mines de Nancy. Depuis 1984, elle organise chaque année l'évènement Forum Est-Horizon, un
 					des plus grands salons
 					de rencontres professionnelles entre étudiants et entreprises du Grand Est. Ce forum n’est pas
 					uniquement destiné aux
@@ -167,11 +170,11 @@
 					toutes les filières: ingénierie, commerce, management…
 
 
-
-
 			</div>
-		</div>
+			
 
+
+		</div>
 		<div class="col-xs-12 col-sm-12 col-lg-12">
 			<h2 class="featurette-heading">Historique du Forum Est-Horizon<span class="text-muted"> </span>
 			</h2>
@@ -239,10 +242,6 @@
 		</div>
 	</div>
 
-
-
-
-
 	<!--  ---------------------------------------------------------------------	-->
 	<!-- 		ARTICLE 4 : Partenaires											-->
 	<!--  ---------------------------------------------------------------------	-->
@@ -254,9 +253,11 @@
 			</div>
 			<div class="row">
 
-
-
-
+				<div class="col-xs-12">
+					<div class="col-xs-12">
+						<!-- <h4 style="text-transform : uppercase;">Partenaires Forum</h4> -->
+					</div>
+				</div>
 
 
 			</div>
@@ -277,16 +278,13 @@
 					<h4 class="modal-title">Conférence</h4>
 				</div>
 				<div class="modal-body">
-					<p>Le Forum Est-Horizon a déjà accueilli de grandes personnalités comme Arnaud
-						Montebourg, ancien
+					<p>Le Forum Est-Horizon a déjà accueilli de grandes personnalités comme Arnaud Montebourg, ancien
 						Ministre de l’économie,
-						ou Amina Benkhadra, ancienne Ministre de l’Energie et de l’environnement du Maroc.
-					</p>
+						ou Amina Benkhadra, ancienne Ministre de l’Energie et de l’environnement du Maroc.</p>
 					<p>Chaque année nous nous chargeons d’organiser pour vous des conférences sur des thèmes
 						d’actualités,
 						au cœur des
-						préoccupations du travailleur de demain, tels que l’entrepreneuriat, l’innovation ou
-						encore le
+						préoccupations du travailleur de demain, tels que l’entrepreneuriat, l’innovation ou encore le
 						travail à l’étranger.
 					</p>
 
@@ -310,16 +308,12 @@
 				</div>
 				<div class="modal-body">
 					<p>Toute l’équipe du Forum Est-Horizon est très heureuse de vous accueillir sur son site
-						internet. Cette année, l’équipe d’élèves ingénieurs des Mines de Nancy organise la
-						38ème
+						internet. Cette année, l’équipe d’élèves ingénieurs des Mines de Nancy organise la 38ème
 						édition qui se tiendra le Jeudi 2 Décembre 2021 au Centre Prouvé à Nancy. </p>
 
-					<p>Comme tous les ans, nous réunissons pour vous un grand nombre d’entreprises reconnues
-						et
-						diversifiées afin de faciliter votre échange avec le monde du travail. En plus de
-						vos
-						échanges avec les entreprises, nous avons également préparé divers ateliers et
-						organisé
+					<p>Comme tous les ans, nous réunissons pour vous un grand nombre d’entreprises reconnues et
+						diversifiées afin de faciliter votre échange avec le monde du travail. En plus de vos
+						échanges avec les entreprises, nous avons également préparé divers ateliers et organisé
 						des conférences pour vous guider dans votre insertion dans le monde professionnel.
 					</p>
 					<p>Liste des événements proposés le jour du Forum : <a class="btn btn-warning " href="/programme"
@@ -343,34 +337,26 @@
 					<h4 class="modal-title">L'équipe</h4>
 				</div>
 				<div class="modal-body">
-					<p>Cette année, l’équipe organisatrice du Forum Est-Horizon est composée de 23 membres,
-						élèves
+					<p>Cette année, l’équipe organisatrice du Forum Est-Horizon est composée de 23 membres, élèves
 						ingénieurs de l’école des
 						Mines de Nancy.
-						Leur défi est d’organiser, malgré la situation particulière, la 38ème édition du
-						Forum qui se
+						Leur défi est d’organiser, malgré la situation particulière, la 38ème édition du Forum qui se
 						tiendra au Centre Prouvé à
 						Nancy le Jeudi 2 Décembre 2021.
-						Pour cela, l’équipe est divisée en plusieurs pôles articulés autour du bureau, qui
-						coordonne les
+						Pour cela, l’équipe est divisée en plusieurs pôles articulés autour du bureau, qui coordonne les
 						opérations. </p>
+					<embed src="../assets/organigrame.pdf" width="800px" height="2100px" />
 
-
-					<p>“Toute l'équipe du Forum Est-Horizon serait heureuse de vous recevoir pour cette 38e
-						édition de
+					<p>“Toute l'équipe du Forum Est-Horizon serait heureuse de vous recevoir pour cette 38e édition de
 						l'événement.
-						Moment important dans la vie d'un étudiant, nous espérons voir représentées des
-						entreprises
+						Moment important dans la vie d'un étudiant, nous espérons voir représentées des entreprises
 						aussi
 						variées que reconnues,
 						dans le but d'organiser un événement fructueux pour tous.
-						Nous mesurons à quel point établir un contact direct avec une entreprise est
-						important pour la
+						Nous mesurons à quel point établir un contact direct avec une entreprise est important pour la
 						recherche d'un stage, ou
-						l'approche du monde du travail, c'est pourquoi cette rencontre nous tient autant à
-						cœur.
-						C'est donc à votre service et à celui des étudiants que nous nous mettons pour
-						permettre des
+						l'approche du monde du travail, c'est pourquoi cette rencontre nous tient autant à cœur.
+						C'est donc à votre service et à celui des étudiants que nous nous mettons pour permettre des
 						échanges qui
 						conditionneront les choix futurs de chacun.”</p>
 					<p>Mathis Faucher,
@@ -385,12 +371,7 @@
 			</div>
 
 		</div>
-
-		<!-- ATTENTION NE PAS LAISSER DE LIGNE VIDE DANS PARTENAIRES.TXT MEME SI C'EST LA DERNIERE -->
 	</div>
-
-
-
 
 	<?php
 /* Essai lecture fichier txt */
